<?xml version="1.0"?>
<package format="2">
  <name>imu_mocap_fusion</name>
  <version>1.0.0</version>
  <description>The imu_mocap_fusion package</description>
  <maintainer email="biteroliver@foxmail.com">YYHAN YIN</maintainer>
  <license>Apache License Version 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/ewe4mav</url> -->
  <author email="biteroliver@foxmail.com">YYHAN YIN</author>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
